--- a/components.html
+++ b/components.html
@@ -80,14 +80,26 @@
     <div class="container">
         <div class="row pad-x-5">
             <div class="col-sm-12">
-                <div class="quote">
-                    <div class="quote__img">
-                        <img src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg" alt="">
+                <div class="quotes-block">
+                    <div class="quote">
+                        <div class="quote__img">
+                            <img src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg" alt="">
+                        </div>
+                        <div class="quote__copy">
+                            <h1 class="quote__copy__title">Sagwadi Maluleke</h1>
+                            <p class="quote__copy__intro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis nihil, sequi adipisci aut nam inventore.</p>
+                            <h2 class="quote__copy__subtitle">Lorem, ipsum dolor.</h2>
+                        </div>
                     </div>
-                    <div class="quote__copy">
-                        <h1 class="quote__copy__title">Sagwadi Maluleke</h1>
-                        <p class="quote__copy__intro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis nihil, sequi adipisci aut nam inventore.</p>
-                        <h2 class="quote__copy__subtitle">Lorem, ipsum dolor.</h2>
+                    <div class="quote">
+                        <div class="quote__img">
+                            <img src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg" alt="">
+                        </div>
+                        <div class="quote__copy">
+                            <h1 class="quote__copy__title">Sagwadi Maluleke</h1>
+                            <p class="quote__copy__intro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis nihil, sequi adipisci aut nam inventore.</p>
+                            <h2 class="quote__copy__subtitle">Lorem, ipsum dolor.</h2>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -101,7 +113,7 @@
 <!-- ##### logo sliders  -->
 
 <div>
-    <div class="container">
+    <div class="container mt50">
         <div class="slider">
             <div class="corporates-logo">
                 <img src="http://go.redandyellow.co.za/l/635981/2019-03-08/q92w/635981/32598/WPP.png" alt="">
@@ -135,6 +147,106 @@
 
 <!-- # edn of row -->
 
+
+
+<div>
+
+    <div class="container mt50">
+
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="module-block">
+                    <h1 class="module-block__title">Module 01</h1>
+                    <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="module-block">
+                    <h1 class="module-block__title">Module 01</h1>
+                    <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="module-block">
+                    <h1 class="module-block__title">Module 01</h1>
+                    <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="module-block">
+                    <h1 class="module-block__title">Module 01</h1>
+                    <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+<div class="container form-block-container mt50">
+    <div class="form-block">
+        <div class="form-block__title">
+            Request a call back
+        </div>
+        <div class="form-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam doloribus impedit autem delectus natus vitae iure vero, laudantium sint!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores porro non ipsa impedit adipisci molestias amet doloribus sapiente voluptatum molestiae consectetur exercitationem, accusamus, nam illo sed, corrupti sint. Impedit obcaecati voluptatum, beatae id officia ea quis inventore deserunt vero sit ducimus tempore laudantium quam adipisci quo voluptas ad! Expedita totam est, dolorum porro illo enim voluptas, repellendus quos consequatur esse eaque iusto tempora eum vero et numquam nihil? Eaque porro ut aut nisi repellendus veritatis nobis corporis delectus numquam ipsam maiores provident esse in et, impedit nam libero architecto animi.
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container mt50">
+        <a href="mailto:registrations@redandyellow.co.za?subject=I%20want%20you%20to%20call%20me%20back" class="cta-btn cta-btn--yellow" onclick="gtag('event', 'Click', { 'event_category': 'Email' });">Request a call back</a>
+
+        <a href="mailto:registrations@redandyellow.co.za?subject=I%20want%20you%20to%20call%20me%20back" class="cta-btn cta-btn--red" onclick="gtag('event', 'Click', { 'event_category': 'Email' });">Request a call back</a>
+</div>
+
+<div class="container mt50">
+
+    <div class="endorsed-by">
+        <span class="endorsers__title">Endorsed by</span>
+        <div class="endorsers">
+            <div class="corporates-logo">
+                <img src="http://go.redandyellow.co.za/l/635981/2019-03-08/q92w/635981/32598/WPP.png" alt="">
+            </div>
+            <div class="corporates-logo">
+                <img src="http://go.redandyellow.co.za/l/635981/2019-03-08/q91w/635981/32568/Absa.png" alt="">
+            </div>
+        </div>  
+    </div>
+
+</div>
+
+<div class="container mt50">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="video-card">
+                <div class="video-card__view">
+                    <div class="video" data-src="https://www.youtube.com/embed/U4dgns6tKk0">
+                            <iframe width="560" height="315"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <img class="video-card__place-holder" src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2018/08/linkedin-sales-navigator-402833-unsplash.jpg" alt="">
+                    <span class="video-card__play"></span>
+                </div>
+                <div class="video-card__intro">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit in maiores molestiae voluptatum architecto iste earum at mollitia aperiam cupiditate.
+                    lorem90
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 </div>
 
 
@@ -146,6 +258,7 @@
 
 <script>
 
+// Slick slider for the 
 $(".slider").slick({
 
 // normal options...
@@ -155,7 +268,7 @@ autoplay: true,
 autoplaySpeed: 2000,
 
 
-// the magic
+// the breakpoints
 responsive: [{
 
     breakpoint: 1024,
@@ -183,6 +296,57 @@ responsive: [{
   }]
 
 
+});
+
+
+// Slick slider for the endorsers 
+$(".endorsers").slick({
+    infinite: true,
+    slidesToShow: 1,
+    autoplay: true,
+    autoplaySpeed: 2000,
+
+});
+
+// Slick slider for the quotes 
+$(".quotes-block").slick({
+    infinite: true,
+    slidesToShow: 1,
+    autoplay: true,
+    autoplaySpeed: 2000,
+
+});
+
+
+// Video play on icon click
+$('body').on('click','.video-card__play', function(){
+    var video = $(this).siblings( ".video" );
+    var image = $(this).siblings( ".video-card__place-holder" );
+    var youtubeLink =  $(video).data('src');
+    var iframe = video.find('iframe');
+    iframe.attr('src', youtubeLink + '?autoplay=1' ).show();
+    $(this).delay(200).hide(200);
+    image.hide();
+});
+
+
+// Scroll position check
+
+$(window).bind('scroll', function() {
+    var scrollTop     = $(window).scrollTop();
+    var formTop = $('.form-block-container').prev().offset().top; //get the offset top of the form block
+    var heightOfPrev = $('.form-block-container').prev().outerHeight();
+    var formBlockHeight = $('.form-block').outerHeight();
+    var FormtopPosition = formTop - scrollTop + heightOfPrev;
+    var formfixed = $('.form-block').hasClass('form-top');
+    console.log( FormtopPosition ); 
+
+    // if(FormtopPosition < 0 && !formfixed){
+    //     $('.form-block').addClass('form-top');
+    // }else if(FormtopPosition > 5 && formfixed) {
+    //     $('.form-block').removeClass('form-top');
+    // }
+    
 });
 
 
