--- a/components.html
+++ b/components.html
@@ -273,7 +273,26 @@
                 <div class="pad-x10">
                         <h1 class="info-card__title">Lorem, ipsum dolor.</h1>
                         <p class="info-card__intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non repudiandae nulla ad modi soluta ipsum cupiditate.</p>
-                        <a href="" class="cta-btn cta-btn--yellow">Hello there</a>
+                        <a href="" class="cta-btn cta-btn--yellow cta-btn--full">Hello there</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="info-card ">
+                <span class="info-card__img">
+                    <img src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2018/08/linkedin-sales-navigator-402833-unsplash.jpg" alt="">
+                </span>
+                <div class="pad-x10">
+                        <h1 class="info-card__title">Lorem, ipsum dolor.</h1>
+                        <div class="info-card__intro">
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            </ul>
+                        </div>
+                        <a href="" class="cta-btn cta-btn--yellow cta-btn--full">Hello there</a>
                 </div>
             </div>
         </div>
