--- a/template1.html
+++ b/template1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:200,300,400,400i,700,700i|Sintony:400,700" rel="stylesheet"><!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     
     <!-- <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" rel="stylesheet"> -->
 
@@ -379,7 +379,7 @@
                                     <iframe width="560" height="315"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <img class="video-card__place-holder" src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2018/08/linkedin-sales-navigator-402833-unsplash.jpg" alt="">
-                            <span class="video-card__play"></span>
+                            <span class="video-card__play video-card__play--center"></span>
                         </div>
                         <div class="video-card__intro">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit in maiores molestiae voluptatum architecto iste earum at mollitia aperiam cupiditate.
@@ -452,26 +452,27 @@
     <div class="container mt50">
 
         <h1>Lorem ipsum dolor sit amet.</h1>
+        <i class="far fa-angle-double-down"></i>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="module-block">
                     <h1 class="module-block__title text-red">Module 01</h1>
                     <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="module-block">
                     <h1 class="module-block__title text-red">Module 01</h1>
                     <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="module-block">
                     <h1 class="module-block__title text-red">Module 01</h1>
                     <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="module-block">
                     <h1 class="module-block__title text-red">Module 01</h1>
                     <p class="module-block__intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates consectetur pariatur eveniet vitae magni.</p>
