with the breakpoint styling

--- a/template1.html
+++ b/template1.html
@@ -39,22 +39,20 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 full-on-tab">
 
                         <div class="logo" pardot-region="Logo">
                             <a
                                 href="https://www.redandyellow.co.za/?utm_source=Pardot&amp;utm_medium=landing_page&amp;utm_campaign=digital_marketing"><img
-                                    alt="" border="0" height="154"
-                                    src="http://go.redandyellow.co.za/l/635981/2019-03-01/ptdt/635981/31998/Red_Yellow_25yrs.png"
-                                    style="width: 225px; height: 154px; border-width: 0px; border-style: solid;"
-                                    width="225"></a>
+                                    alt=""
+                                    src="http://go.redandyellow.co.za/l/635981/2019-03-01/ptdt/635981/31998/Red_Yellow_25yrs.png"></a>
                         </div>
 
                         <div class=" headline-container">
                             <div class="headline">
-                                <h2 pardot-region="event-type" data-id="3220">Online learning from an accredited
+                                <h2 pardot-region="event-type" class="event-type" data-id="3220">Online learning from an accredited
                                     institution</h2>
-                                <h1 pardot-region="event-title" data-id="3222">DIGITAL MARKETING COURSE</h1>
+                                <h1 pardot-region="event-title" class="event-title" data-id="3222">DIGITAL MARKETING COURSE</h1>
                             </div>
                             <div class="description" pardot-region="event-details" data-id="3224">
                                 <p>Our flagship Digital Marketing course is endorsed by IAB South Africa and has been
@@ -62,33 +60,37 @@
                                     the knowledge and practical skills you need to implement an effective digital
                                     marketing strategy for your brand or business.&nbsp;</p>
                             </div>
-                            <table class="event-details">
-                                <tbody>
-                                    <tr>
-                                        <td><i class="fas fa-calendar-alt"></i> <span pardot-region="event-date"
-                                                data-id="3226">10 weeks online</span></td>
-                                        <td><i class="fas fa-clock"></i> <span pardot-region="event-time"
-                                                data-id="3284">8
-                                                - 10 hours / week</span></td>
-                                        <td><i class="fas fa-map-marker-alt"></i> <span pardot-region="event-location"
-                                                data-id="3228">Online Learning</span></td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="event-details">
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <i class="fas fa-calendar-alt"></i> <span pardot-region="event-date"
+                                        data-id="3226">10 weeks online</span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <i class="fas fa-clock"></i> <span pardot-region="event-time"
+                                        data-id="3284">8
+                                        - 10 hours / week</span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <i class="fas fa-map-marker-alt"></i> <span pardot-region="event-location"
+                                        data-id="3228">Online Learning</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
 
                     <!-- THE FORM -->
 
-                    <div class="col-sm-4 plx30">
+                    <div class="col-sm-4 plx30 full-on-tab">
 
                         <!-- this need to be here so that the form have a reference point as it changes positions -->
                         <div></div>
 
                         <div class="form-block-container">
                             <div class="form-block">
-                                <div class="form-block__title">
+                                <div class="form-block__title yellow">
                                     GET MORE INFORMATION
                                 </div>
                                 <!-- form Info Block -->
@@ -272,32 +274,31 @@
                             <!-- Sections below the form -->
                             <!-- graduate -->
                             <div class="graduate">
-                                <h1 class="section-title text-red">Lorem ipsum dolor sit amet.</h1>
+                                <h2 class=" text-red">What graduates have to say</h2>
                                 <div class="profile">
                                     <span class="profile__img">
                                         <img src="https://storage.pardot.com/635981/32004/AlanEdgar.png" alt="">
                                     </span>
-                                    <h1 class="profile__title text-red">Lorem, ipsum dolor.</h1>
-                                    <h2 class="profile__sub-title">Lorem ipsum dolor sit.</h2>
-                                    <span class="profile__copy">Lorem ipsum, dolor sit amet consectetur adipisicing
-                                        elit. Laborum inventore, recusandae error earum ipsum quas! Qui vitae quibusdam
-                                        fugit aliquam quis inventore nihil facere ex error. Nostrum, aperiam minus.
-                                        Placeat!</span>
+                                    <h1 class="profile__title ">Alan Edgar</h1>
+                                    <h2 class="profile__sub-title">Executive Creative Director, TBWA</h2>
+                                    <span class="profile__copy">
+                                        <em>"This course has been incredible. I'm going to be able to use all the concepts I've learned in a new business that my wife is starting and excited to see how it will positively impact in practice. Please extend my thanks to all the lecturers and markers."</em>
+                                    </span>
                                 </div>
                             </div>
 
                             <!-- contributor -->
                             <div class="contributor">
+                                <h2 class=" text-red">Meet the course contributor</h2>
                                 <div class="profile">
                                     <span class="profile__img">
                                         <img src="https://storage.pardot.com/635981/32004/AlanEdgar.png" alt="">
                                     </span>
-                                    <h1 class="profile__title text-red">Lorem, ipsum dolor.</h1>
-                                    <h2 class="profile__sub-title">Lorem ipsum dolor sit.</h2>
-                                    <span class="profile__copy">Lorem ipsum, dolor sit amet consectetur adipisicing
-                                        elit. Laborum inventore, recusandae error earum ipsum quas! Qui vitae quibusdam
-                                        fugit aliquam quis inventore nihil facere ex error. Nostrum, aperiam minus.
-                                        Placeat!</span>
+                                    <h1 class="profile__title ">Rob Stokes</h1>
+                                    <h2 class="profile__sub-title">Entrepreneur and digital marketing guru</h2>
+                                    <span class="profile__copy">
+                                        <em>"Rob Stokes is an entrepreneur with over 20 years of digital marketing experience for some of the biggest brands in the world. In 1999, he foundeaward-winningng digital agency, Quirk, and built it into one of the largest agencies in Africa before selling it to London listed global leader, WPP, in 2014."</em>
+                                    </span>
                                 </div>
                             </div>
 
@@ -306,6 +307,14 @@
                                     class="cta-btn cta-btn--red full"
                                     onclick="gtag('event', 'Click', { 'event_category': 'Email' });">Request a
                                     call back</a>
+                            </div>
+                            
+                            <div>
+                                <div class="info-card pad-x20 light-gray-bg">
+                                    <h1 class="info-card__title">Lorem, ipsum dolor.</h1>
+                                    <p class="info-card__intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non repudiandae nulla ad modi soluta ipsum cupiditate.</p>
+                                    <a href="" class="info-card__cta"></a>
+                                </div>
                             </div>
 
                         </div>
@@ -337,7 +346,7 @@
 
         <div class="container mt50">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 full-on-tab">
                     <div class="row">
 
                         <div class="col-sm-4">
@@ -387,7 +396,7 @@
         <div>
             <div class="container mt50">
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 full-on-tab">
                         <h1 class="section-title--sub text-red">Trusted By</h1>
                         <div class="slider">
                             <div class="corporates-logo">
@@ -436,7 +445,7 @@
                         digital marketing strategy. This course is perfect for anyone wanting to effectively market
                         their brand or business</p>
                 </div>
-                <div class="col-sm-8 mt50">
+                <div class="col-sm-8 mt50 full-on-tab">
                     <h1 class="section-title--sub text-red">What you'll learn:</h1>
                     <div>
                         <div class="row pad-x-5">
@@ -444,7 +453,7 @@
                             <div class="col-sm-6 ">
                                 <div class="lesson-card">
                                     <span class="lesson-card--img">
-                                        <i class="fas fa-calendar-alt"></i>
+                                        <i class="fas fa-desktop"></i>
                                     </span>
                                     <span class="lesson-card--copy">
                                         Understand the digital customer and design customer experiences
@@ -466,7 +475,7 @@
                             <div class="col-sm-6">
                                 <div class="lesson-card">
                                     <span class="lesson-card--img">
-                                        <i class="fas fa-calendar-alt"></i>
+                                        <i class="fas fa-desktop"></i>
                                     </span>
                                     <span class="lesson-card--copy">
                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -477,7 +486,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8 mt50">
+                <div class="col-sm-8 mt50 full-on-tab">
                     <h1 class="section-title--sub text-red">What you'll learn:</h1>
                     <div>
                         <ul class="row-list">
@@ -508,10 +517,9 @@
                                         alt="">
                                 </div>
                                 <div class="quote__copy">
-                                    <h1 class="quote__copy__title">Sagwadi Maluleke</h1>
-                                    <p class="quote__copy__intro">Lorem ipsum dolor sit, amet consectetur adipisicing
-                                        elit. Blanditiis nihil, sequi adipisci aut nam inventore.</p>
-                                    <h2 class="quote__copy__subtitle">Lorem, ipsum dolor.</h2>
+                                    <!-- <h1 class="quote__copy__title">Grant Webster</h1> -->
+                                    <p class="quote__copy__intro">Over the course of my career, I have always used Red & Yellow as a first filter for advertising and marketing related hires, looking at the institution’s graduates first. Why? because they are always the ones who had business and commercial understanding over and above the advertising and creative side.</p>
+                                    <h2 class="quote__copy__subtitle">- Grant Webster, former heavy-hitter at Makro, Takealot, Look n Listen, Toy Kingdom, WeFix.</h2>
                                 </div>
                             </div>
                             <div class="quote">
@@ -546,7 +554,7 @@
 
         <div class="container mt50">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 full-on-tab">
                     <div class="video-card">
                         <div class="video-card__view">
                             <div class="video" data-src="https://www.youtube.com/embed/U4dgns6tKk0">
