Removed all scytax errors

--- a/old.html
+++ b/old.html
@@ -140,10 +140,10 @@
             }
 
             /* Set default editable table cell spacing & widths */
-            table.editable-table.3col td {
+            /* table.editable-table.3col td {
                 padding:0px 15px;
                 width:33%;
-            }
+            } */
   /* --------------------------
 
   WARNING: EDITING THE BELOW CSS MIGHT
