add the changed files

--- a/index.html
+++ b/index.html
@@ -198,18 +198,18 @@
                                                 weekly newsletter?</label>
 
 
-                                            <span class="value"><span class="" style=""><input type="radio"
+                                            <span class="value"><span class="" ><input type="radio"
                                                         name="635981_19590pi_635981_19590[]"
                                                         id="635981_19590pi_635981_19590_187558_187558" value="187558"
                                                         onchange=""><label class="inline"
                                                         for="635981_19590pi_635981_19590_187558_187558"> Yes sign me
-                                                        up!</label></span><span class="" style=""><input type="radio"
+                                                        up!</label></span><span class="" ><input type="radio"
                                                         name="635981_19590pi_635981_19590[]"
                                                         id="635981_19590pi_635981_19590_187560_187560" value="187560"
                                                         onchange=""><label class="inline"
                                                         for="635981_19590pi_635981_19590_187560_187560"> No, I don't
                                                         want career boosting tips</label></span><span class=""
-                                                    style=""><input type="radio" name="635981_19590pi_635981_19590[]"
+                                                   ><input type="radio" name="635981_19590pi_635981_19590[]"
                                                         id="635981_19590pi_635981_19590_187562_187562" value="187562"
                                                         onchange=""><label class="inline"
                                                         for="635981_19590pi_635981_19590_187562_187562"> I've already
