--- a/old.html
+++ b/old.html
@@ -588,8 +588,7 @@ src="https://www.facebook.com/tr?id=755081827958842&ev=PageView
       </div>
     </div>
   </div>
-  // Hello Masa never
-  // play around
+
   <a class="open-form desktop-hide" href="#">Download The free eBook</a> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript">
   </script> 
@@ -610,6 +609,14 @@ src="https://www.facebook.com/tr?id=755081827958842&ev=PageView
           })
   </script>
   <script>
+
+    function testo(){
+      return "nevere here";
+    }
+
+    function note(){
+      
+    }
   window.addEventListener('load',function(){
     var x = 0;
     var timer = setInterval(function(){
