old.html edited online with Bitbucket

--- a/old.html
+++ b/old.html
@@ -611,11 +611,12 @@ src="https://www.facebook.com/tr?id=755081827958842&ev=PageView
   <script>
 
     function testo(){
-      return "nevere here";
+      var kko = 900;
     }
 
     function note(){
-      
+      var hello = 80080;
+      var hko = 978789;
     }
   window.addEventListener('load',function(){
     var x = 0;
