--- a/old.html
+++ b/old.html
@@ -612,10 +612,11 @@ src="https://www.facebook.com/tr?id=755081827958842&ev=PageView
 
     function testo(){
       return "nevere here";
+      var ttt = 555;
     }
 
     function note(){
-      
+      var hko = 9009;
     }
   window.addEventListener('load',function(){
     var x = 0;
