center the info blocks

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
 
 <body>
 
+    <!-- just paying with progress circle -->
+
+    <div class="circle">
+            <svg
+            class="progress-ring"
+            width="30"
+            height="30">
+           <circle
+             class="progress-ring__circle"
+             stroke="#f1ce00"
+             stroke-width="2"
+             fill="transparent"
+             r="12"
+             cx="15"
+             cy="15"/>
+         </svg>
+    </div>
+
+    <!-- end of progress circle -->
     <div>
 
         <!-- Hoghlight start here -->
