Remove the plx30 on mobile

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                     <!-- THE FORM -->
 
-                    <div class="col-sm-4 plx30 full-on-tab">
+                    <div class="col-sm-4 plx30 plmx10 full-on-tab">
 
                         <!-- this need to be here so that the form have a reference point as it changes positions -->
                         <div></div>
