fixed the form check mark for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
         /* END OF FORM inline styling */
 
 
-        /* @charset "UTF-8"; */
+
+
+
+
+
+        @charset "UTF-8";
 /*********************
 BREAKPOINTS
 *********************/
@@ -1161,7 +1166,7 @@ body {
   content: "";
   position: absolute;
   left: 5px;
-  top: 9px;
+  top: 15px;
   background: white;
   width: 2px;
   height: 2px;
@@ -1447,8 +1452,6 @@ ul.social i {
 }
 
 /*# sourceMappingURL=style.css.map */
-
-
 
     </style>
 
@@ -1905,11 +1908,11 @@ ul.social i {
             <div class="endorsed-by mt50">
                 <span class="endorsers__title" pardot-region="endorsed-by-title">Endorsed by</span>
                 <div class="endorsers" pardot-repeatable>
-                    <div class="corporates-logo" pardot-region="endorsed-by-logo-one" pardot-removable="subheader" pardot-region-type="image">
-                        <img src="http://go.redandyellow.co.za/l/635981/2019-03-08/q92w/635981/32598/WPP.png" alt="">
+                    <div class="corporates-logo" pardot-region="endorsed-by-logo-one" pardot-removable="subheader" >
+                        <img  src="http://go.redandyellow.co.za/l/635981/2019-03-08/q92w/635981/32598/WPP.png" alt="">
                     </div>
-                    <div class="corporates-logo" pardot-region="endorsed-by-logo-two" pardot-region-type="image">
-                        <img src="http://go.redandyellow.co.za/l/635981/2019-03-08/q91w/635981/32568/Absa.png" alt="">
+                    <div class="corporates-logo" pardot-region="endorsed-by-logo-two" >
+                        <img  src="http://go.redandyellow.co.za/l/635981/2019-03-08/q91w/635981/32568/Absa.png" alt="">
                     </div>
                 </div>
             </div>
