new quotes and layout styling

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <div pardot-repeatable="yes">
                                 <div class="info-card pad-x20 light-gray-bg" pardot-region="gray-block" pardot-region-type="pardot">
                                     <h1 class="info-card__title" >Lorem, ipsum dolor.</h1>
-                                    <p class="info-card__intro" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non repudiandae nulla ad modi soluta ipsum cupiditate.</p>
+                                    <p class="info-card__intro" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime.</p>
                                     <!-- <a href="" class="info-card__cta" ></a> -->
                                     <br>
                                     <div class="text-align-right">
@@ -283,7 +283,7 @@
             </div>
 
         </div>
-        <div class="ligiht-gray-bg">
+        <div class=" ">
 
             <div class="container pt50 pb20">
                 <div class="row">
@@ -311,8 +311,7 @@
                                 </span>
                                 <h1 class="info-card__title" pardot-region="benefit-one-title">Lorem, ipsum dolor.</h1>
                                 <p class="info-card__intro" pardot-region="benefit-one-intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non
-                                    repudiandae nulla ad modi soluta ipsum cupiditate.</p>
+                                    Nisi aut aperiam maxime, minus mollitia recusandae </p>
                                 <!-- <a href="" class="info-card__cta"></a> -->
                             </div>
                         </div>
@@ -324,8 +323,7 @@
                                 </span>
                                 <h1 class="info-card__title" pardot-region="benefit-two-title">Lorem, ipsum dolor.</h1>
                                 <p class="info-card__intro" pardot-region="benefit-two-intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non
-                                    repudiandae nulla ad modi soluta ipsum cupiditate.</p>
+                                    Nisi aut aperiam maxime, minus mollitia recusandae </p>
                                 <!-- <a href="" class="info-card__cta"></a> -->
                             </div>
                         </div>
@@ -336,9 +334,7 @@
                                     <i class="fas fa-desktop"></i>
                                 </span>
                                 <h1 class="info-card__title" pardot-region="benefit-three-title">Lorem, ipsum dolor.</h1>
-                                <p class="info-card__intro" pardot-region="benefit-three-intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Nisi aut aperiam maxime, minus mollitia recusandae maiores temporibus non
-                                    repudiandae nulla ad modi soluta ipsum cupiditate.</p>
+                                <p class="info-card__intro" pardot-region="benefit-three-intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime, minus mollitia recusandae </p>
                                 <!-- <a href="" class="info-card__cta"></a> -->
                             </div>
                         </div>
@@ -395,31 +391,32 @@
         <!-- ##### Quote Block -->
         <div class="ligiht-gray-bg mt50">
 
-            <div class="container">
+            <div class="container pb20">
                 <div class="row pad-x-5">
                     <div class="col-sm-12">
                         <div class="quotes-block">
-                            <div class="quote">
-                                <div class="quote__img" >
-                                    <img pardot-region="modules-quote-one-img" pardot-region-type="image" src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg"
-                                        alt="">
-                                </div>
+                            <div class="quote"> 
                                 <div class="quote__copy">
                                     <!-- <h1 class="quote__copy__title">Grant Webster</h1> -->
-                                    <p class="quote__copy__intro" pardot-region="modules-quote-one-copy-intro">Over the course of my career, I have always used Red & Yellow as a first filter for advertising and marketing related hires, looking at the institution’s graduates first. Why? because they are always the ones who had business and commercial understanding over and above the advertising and creative side.</p>
+                                    <div class="quote__copy__intro" pardot-region="modules-quote-one-copy-intro">
+                                        <div class="quote__img" >
+                                            <img pardot-region="modules-quote-one-img" pardot-region-type="image" src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg"
+                                                alt="">
+                                        </div>
+                                        Over the course of my career, I have always used Red & Yellow as a first filter for advertising and marketing related hires, looking at the institution’s graduates first. Why? because they are always the ones who had business and commercial understanding over and above the advertising and creative side.</div>
                                     <h2 class="quote__copy__subtitle" pardot-region="modules-quote-one-copy-subtitle">- Grant Webster, former heavy-hitter at Makro, Takealot, Look n Listen, Toy Kingdom, WeFix.</h2>
                                 </div>
                             </div>
                             <div class="quote">
-                                <div class="quote__img" pardot-region="modules-quote-two-img">
-                                    <img src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg"
-                                        alt="">
-                                </div>
                                 <div class="quote__copy">
-                                    <h1 class="quote__copy__title" pardot-region="modules-quote-two-title">Sagwadi Maluleke</h1>
-                                    <p class="quote__copy__intro" pardot-region="modules-quote-two-intro">Lorem ipsum dolor sit, amet consectetur adipisicing
-                                        elit. Blanditiis nihil, sequi adipisci aut nam inventore.</p>
-                                    <h2 class="quote__copy__subtitle" pardot-region="modules-quote-two-subtitle">Lorem, ipsum dolor.</h2>
+                                    <!-- <h1 class="quote__copy__title">Grant Webster</h1> -->
+                                    <div class="quote__copy__intro" pardot-region="modules-quote-one-copy-intro">
+                                        <div class="quote__img" >
+                                            <img pardot-region="modules-quote-one-img" pardot-region-type="image" src="https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/02/Stephen-Sandmann.jpeg"
+                                                alt="">
+                                        </div>
+                                        Over the course of my career, I have always used Red & Yellow as a first filter for advertising and marketing related hires, looking at the institution’s graduates first. Why? because they are always the ones who had business and commercial understanding over and above the advertising and creative side.</div>
+                                    <h2 class="quote__copy__subtitle" pardot-region="modules-quote-one-copy-subtitle">- Grant Webster, former heavy-hitter at Makro, Takealot, Look n Listen, Toy Kingdom, WeFix.</h2>
                                 </div>
                             </div>
                         </div>
