fixed styling and final clean up

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@ body {
 }
 .form-top .form-block__title:before {
   font-family: "Font Awesome 5 Free";
-  content: "";
+  content: "\f078";
   height: 15px;
   position: absolute;
   top: 25px;
